--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <!-- Landing -->
       <section class="landing">
-          <h1 class="section-bg-heading">C# Full-Stack .NET Core Developer</h1>
+          <h1 class="section-bg-heading">C# Developer</h1>
         <div class="logo">
           <span>Web</span>
           <span>Dev</span>
