Update About section

--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
           <div class="section-border"></div>
           <div class="developer-info">
             <h3 class="greeting">Hello, <span>my name is</span></h3>
-            <h1 class="name"><span>John</span> Smith</h1>
+            <h1 class="name"><span>Bernard</span> Matanga</h1>
             <h3 class="prof">I am <span>Web Developer</span></h3>
             <p class="about">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
-              at cum rerum dicta harum, quam esse modi placeat deserunt illum!
+              I am a Freelance Developer with a proven track record in the ICT industry. 
+              Proficient in C#, Full-Stack Development, ASP.NET Core, Entity Framework (EF) Core, 
+              and Microsoft SQL Server. Dedicated professional committed to delivering top-tier 
+              ICT support to diverse organizations and individuals.
             </p>
             <div class="social-media">
               <i class="fa-brands fa-facebook-f"></i>
