--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="developer-info">
             <h3 class="greeting">Hello, <span>my name is</span></h3>
             <h1 class="name"><span>Bernard</span> Matanga</h1>
-            <h3 class="prof">I am <span>Web Developer</span></h3>
+            <h3 class="prof">I am a<span>C# Full-Stack .NET Core Developer</span></h3>
             <p class="about">
               I am a Freelance Developer with a proven track record in the ICT industry. 
               Proficient in C#, Full-Stack Development, ASP.NET Core, Entity Framework (EF) Core, 
