--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="developer-info">
             <h3 class="greeting">Hello, <span>my name is</span></h3>
             <h1 class="name"><span>Bernard</span> Matanga</h1>
-            <h3 class="prof">I am a<span>C# Full-Stack .NET Core Developer</span></h3>
+            <h3 class="prof"><span>I am a C# Full-Stack .NET Core Developer</span></h3>
             <p class="about">
               I am a Freelance Developer with a proven track record in the ICT industry. 
               Proficient in C#, Full-Stack Development, ASP.NET Core, Entity Framework (EF) Core, 
@@ -72,7 +72,7 @@
           </div>
           <div class="developer-img">
             <div class="dev-img-wrapper">
-              <img src="images/developer.png" />
+              <img src="images/Profile Pic.jpg" />
             </div>
             <div class="dev-experience dev-work">
               <span>15</span>
